--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,1 +1,4 @@
-Hi! This is the home page!
+<h1>Welcome to Team Task Manager!</h1>
+
+<%= link_to "Log In", login_path, class: "btn btn-primary" %>
+<%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
