--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,7 @@
     <div id="error_explanation">
       <h2>
         <%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:
-      </h2>    
+      </h2>
       <ul>
       <% @user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,3 +11,11 @@
       </ul>
     </div>
   <% end %>
+
+  <%= f.label :name %>
+  <br>
+  <%= f.text_field :name%>
+  
+  <%= f.label :name %>
+  <br>
+  <%= f.text_field :name%>
