added logout to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
-User
+Welcome! <%= @user.name %>
+
+List position
+List teams with links
+List personal lists
+
+
+ <%= link_to "Log Out", signout_path, method: :delete %>
