--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,3 +2,5 @@
 
 <%= link_to "Log In", login_path, class: "btn btn-primary" %>
 <%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
+
+<%= link_to('Log in with Facebook!', '/auth/facebook') %>
