--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,6 +1,17 @@
 <h1>Welcome to Team Task Manager!</h1>
 
+<% if session[:user_id] %>
+  <h1><%= @user.name %></h1>
+  <h2>Email: <%= @user.email %></h2>
+  <h2>Facebook UID: <%= @user.id %></h2>
+
+<% else %>
+
+
+
 <%= link_to "Log In", login_path, class: "btn btn-primary" %>
 <%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %>
 
 <%= link_to('Log in with Facebook!', '/auth/facebook') %>
+
+<% end %>
