--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,9 +1,32 @@
 <h1>Welcome to Team Task Manager!</h1>
 
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '{2064103790318505}',
+      cookie     : true,
+      xfbml      : true,
+      version    : '{v3.1}'
+    });
+
+    FB.AppEvents.logPageView();
+
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
 <% if session[:user_id] %>
   <h1><%= @user.name %></h1>
   <h2>Email: <%= @user.email %></h2>
-  <h2>Facebook UID: <%= @user.id %></h2>
+  <h2>Facebook UID: <%= @user.uid %></h2>
+  <img src="<%= @user.image %>">
 
 <% else %>
 
