--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,7 +3,8 @@
 <% @list.tasks.each do |task| %>
 <%= form_for(task) do |f| %>
   <%= f.label :name, task.name %>
-  <%= f.check_box :name %>
+  <%= f.check_box :completed %>
+  <%= f.submit %>
   <% end %>
 
 <!-- <input type="checkbox" name="list[task_ids][]" value="<%= task.id %>" -->
