added nested resource create list for users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,5 +9,8 @@
   <% end %>
 </ul>
 
+<p>  <%= link_to "Create New List", new_user_list_path(@user) %></p>
+
+
 
  <%= link_to "Log Out", signout_path, method: :delete %>
