--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <ul>
+      <% if current_user %>
+        <li><%= link_to " #{current_user.name}'s Homepage", user_path(current_user) %></li>
+        <li><%= link_to "Your Lists", user_lists_path(current_user) %></li>
+        <li><%= link_to "Log Out", signout_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Log In", login_path, class: "btn btn-primary" %></li>
+        <li><%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %></li>
+      <% end %>
+    </ul>
+
+
     <%= yield %>
   </body>
 </html>
