--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,3 +1,17 @@
+<%= form_for(@list) do |f| %>
+  <% if @list.errors.any? %>
+    <div id="error_explanation">
+      <h2>There were some errors:</h2>
+
+      <ul>
+        <% @list.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <% end %>
+
 <h2>Create a list!</h2>
 
 
