--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,7 +4,7 @@
 <%= form_for(task) do |f| %>
     <%= f.label :name do %>
       <%= f.check_box :completed %>
-      <%= link_to task.name, task_path(task) %>.
+      <%= link_to task.name, task_path(task) %>
     <% end %>
     <br>
 
