--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <ul>
       <% if current_user %>
         <li><%= link_to " #{current_user.name}'s Homepage", user_path(current_user) %></li>
+        <li><%= link_to " #{current_user.team.name} Team's Homepage", user_team_path(current_user, current_user.team) %></li>
         <li><%= link_to "Your Lists", user_lists_path(current_user) %></li>
         <li><%= link_to "Log Out", signout_path, method: :delete %></li>
       <% else %>
