--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,1 +1,11 @@
-<%= @team.name %>
+
+<h2><%= @team.name %></h2>
+<% @team.users.each do |user| %>
+
+  <%= user.name %> ---
+  <% user.lists.each do|list|  %>
+    <%= link_to list.name, user_list_path(current_user, list) %>
+    <% end %>
+    <br>
+    <br>
+<% end %>
