--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -14,8 +14,8 @@
 
 <h2>Create a list!</h2>
 
-
 <%= form_for(@list) do |f| %>
+<%= hidden_field_tag :new_user_num, "#{@user_id}" %>
   <%= f.label :name, "List Name" %>
   <%= f.text_field :name %> <br><br>
 
