--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,14 +6,5 @@
       <%= f.check_box :completed %>
       <%= link_to task.name, task_path(task) %>
     <% end %>
-    <br>
-
-
-  <!-- <%= f.label :name, task.name %>
-  <%= f.check_box :completed %>
-  <%= f.submit %>
-  <% end %> -->
-
-<!-- <input type="checkbox" name="list[task_ids][]" value="<%= task.id %>" -->
-<!-- <p><a href="/task/<%=task.id%>/edit"><%=task.name%></a></p> -->
+<% end %>
 <% end %>
