--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -3,6 +3,9 @@
 <% @team.users.each do |user| %>
 
   <%= user.name %> ---
+  <% if current_user.position > user.position && !user.lists.empty? %>
+  <%= link_to "new list", new_list_path(:user_id => user.id)%>
+  <% end %>
   <% user.lists.each do|list|  %>
     <%= link_to list.name, user_list_path(current_user, list) %>
     <% end %>
