--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,5 +6,9 @@
       <%= f.check_box :completed %>
       <%= link_to task.name, task_path(task) %>
     <% end %>
+  <% end %>
 <% end %>
-<% end %>
+
+<% if current_user.position > @list.user.position %>
+    <%= link_to 'Delete', "/lists/#{@list.id}", method: :delete%>
+    <% end %>
