--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,6 +5,7 @@
     <%= f.label :name do %>
       <%= f.check_box :completed %>
       <%= link_to task.name, task_path(task) %>
+      <%= f.submit %>
     <% end %>
   <% end %>
 <% end %>
