--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,12 @@
 <h1>Welcome! <%= @user.name %> </h1>
 
 <ul>
-  <li>List position <%= @user.position %></li>
-  <li>List teams with links <%= @user.team.name %></li>
-  <li>List personal lists </li>
+  <li>Position: <%= @user.position %></li>
+  <li>Team <%= @user.team.name %></li>
+  <li>Lists </li>
   <% @user.lists.each do |list| %>
   <%= link_to list.name, user_list_path(@user, list) %>
+  <br>
   <% end %>
 </ul>
 
