--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <% else %>
         <li><%= link_to "Log In", login_path, class: "btn btn-primary" %></li>
         <li><%= link_to "Sign Up", new_user_path, class: "btn btn-primary" %></li>
+        <li><%= link_to('Log in with Facebook!', '/auth/facebook') %></li>
       <% end %>
     </ul>
 
