--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,8 +26,8 @@
   <br>
   <%= f.label :team %>
   <%= f.collection_select :team_id, Team.order(:name),:id,:name, include_blank: true %>
-"Or create new team"
-  <%= label_tag :new_team_name, "Team name" %>
+or Create New
+  <%= label_tag :new_team_name, "Team" %>
   <%= text_field_tag :new_team_name %>
   <br>
   <%= f.submit class: "btn btn-primary" %>
