--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -15,23 +15,36 @@
 <h2>Create a list!</h2>
 
 <%= form_for(@list) do |f| %>
-<%= hidden_field_tag :new_user_num, "#{@user_id}" %>
+
+  <%= hidden_field_tag :new_user_num, "#{@user_id}" %>
+
   <%= f.label :name, "List Name" %>
   <%= f.text_field :name %> <br><br>
 
   <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
     <%= tasks.text_field :name %>
-  <% end %>
+  <% end %> <br>
   <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
     <%= tasks.text_field :name %>
-  <% end %>
+  <% end %> <br>
   <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
     <%= tasks.text_field :name %>
-  <% end %>
+  <% end %> <br>
   <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
     <%= tasks.text_field :name %>
-  <% end %>
-
+  <% end %> <br>
+  <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
+    <%= tasks.text_field :name %>
+  <% end %> <br>
+  <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
+    <%= tasks.text_field :name %>
+  <% end %> <br>
+  <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
+    <%= tasks.text_field :name %>
+  <% end %> <br>
+  <%= f.fields_for :tasks, @list.tasks.build do |tasks| %>
+    <%= tasks.text_field :name %>
+  <% end %> <br>
 
   <%= f.submit %>
 <% end %>
