--- a/app/views/tasks/tasks_to_complete.html.erb
+++ b/app/views/tasks/tasks_to_complete.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(task) do |f| %>
     <%= f.label :name do %>
       <%= f.check_box :completed %>
-      <%= link_to task.name, task_path(task) %>
+      <%= task.name %>
       <%= f.submit %>
     <% end %>
   <% end %>
